# FinRiskLLMReview

./: LICENSE  README.md  final_result.py  keywords.py  pyproject.toml  stage1_keywords.py  stage2_domain_filter.py
cache/stats_cache/: data_hash.txt
data/: last_loaded_metadata.json
data/api_cache/: api_key.txt
data/data_cache/: last_loaded_data.pkl  last_loaded_metadata.json
data/keywords/: ML子集.json
data/keywords_cache/: current_keywords.json
prompts/: default.json  stage2_prompts.json
raw_data/CNKI/: portfolio_dl.csv  portfolio_dl.xls  portfolio_llm.csv  portfolio_llm.xls  portfolio_ml.csv  portfolio_ml.xls  pricing_dl.csv  pricing_dl.xls  pricing_ml.csv  pricing_ml.xls  risk_dl.csv  risk_dl.xls  risk_llm.csv  risk_llm.xls  risk_ml.csv  risk_ml.xls
raw_data/WOS/: portfolio_dl.csv  portfolio_dl.xls  portfolio_llm.csv  portfolio_llm.xls  pricing_dl.csv  pricing_dl.xls  pricing_ml.csv  pricing_ml.xls  risk_dl.csv  risk_dl.xls  risk_llm.csv  risk_llm.xls
utils/: __init__.py  cache_manager.py  data_loader.py  llm_processor.py  stage2_cache_manager.py  stage2_llm_processor.py
