[project]
name = "submit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "llama-index>=0.12.37",
    "llama-index-llms-deepseek>=0.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "streamlit>=1.45.1",
    "xlrd>=2.0.1",
]
